@@ -1,4 +1,12 @@
 2004-11-04 Mikhail Khodjaiants
+	Removed "Refresh" and "Auto-Refresh" actions support for shared libraries.
+	* ICDebugConstants.java
+	* ICSharedLibraryManager.java
+	* CSharedLibraryManager.java
+	* ICUpdateManager.java: removed
+	* CUpdateManager.java: removed
+
+2004-11-04 Mikhail Khodjaiants
 	Removed "Refresh" and "Auto-Refresh" actions support for registers.
 	* ICDebugConstants.java
 	* ICRegisterManager.java
